--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "gulpfile.js",
+	"private": true,
+	"homepage": "https://fukodiaz.github.io/Sedona-3version/",
 	"dependencies": {
-		"normalize.css": "^8.0.1"
+		"normalize.css": "^8.0.1",
+		"svgxuse": "^1.2.6"
 	},
 	"devDependencies": {
 		"browser-sync": "^2.26.7",
+		"gh-pages": "^3.2.3",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^7.0.1",
 		"gulp-clean-css": "^4.2.0",
@@ -23,7 +27,8 @@
 		"posthtml-include": "^1.4.3"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"deploy": "gh-pages -d build"
 	},
 	"author": "",
 	"license": "ISC"
